inst/components/scss/toolbar.scss
/* Toolbar */
.bslib-toolbar {
  display: flex;
  align-items: center;
  gap: 0;

  /* ---- Toolbar options ---- */

  &[data-align="left"] {
    margin-right: auto;
    justify-content: start;
  }

  &[data-align="right"] {
    margin-left: auto;
    justify-content: end;
  }

  /* ---- Toolbar Input Buttons ---- */

  // Keep labels and icons centered in the button
  .bslib-toolbar-input-button {
    align-items: center;
    justify-content: center;
    line-height: 1; // Override Bootstrap's line-height to avoid too much vertical space
    height: var(--_icon-size, 1.75rem); // Keep square icon and label + icon button heights consistent
  }

  // Remove the left padding on label-only buttons so the text is centered
  .bslib-toolbar-input-button[data-type="label"] {
    .action-label {
      padding-left: 0; 
    }
  }

  // Square icon-only buttons
  .bslib-toolbar-input-button[data-type="icon"] {
    aspect-ratio: 1;
    line-height: 1 !important; // Ensure no line-height interference
    
    // Remove padding on hidden label to keep icon centered
    .action-label {
      padding-left: 0;
    }

    // Ensure icon is centered
    >.action-icon {
      display: flex;
      align-items: center;
      justify-content: center;
      line-height: 1; // Remove excess line-height
      margin: 0; // Remove any default margins
    }
  }

  /* ---- Adjustments to other elements ---- */

  // Ensures uniformity of font sizing in elements and sub-elements (e.g., input select)    
  &,
  & * {
    font-size: 0.9rem;
  }

  &>* {
    margin-bottom: 0 !important;
    width: auto;
    align-self: center;
  }
}


/* Toolbar Select Input */
.bslib-toolbar-input-select {

  .form-group.shiny-input-container {
    width: auto;

    select {
      width: auto;
    }
  }

  /* Remove the select label visually */
  #select-label {
    display: none;
  }

  /* Make children take width=auto to size to content */
  &>* {
    width: auto;
  }

  select {
    appearance: auto;
    /* .form-controls takes away the drop-down arrow, this ensures it shows up */
    border: none;
    transition: background-color 120ms ease, color 120ms ease;
  }

  // Hover, active, and focus styling to highlight the select and options on interaction
  // because default styles are disabled to make the input slimmer
  & select:hover {
    background-color: rgba(var(--bs-emphasis-color-rgb, 0, 0, 0), 0.08);
  }

  & select:active {
    background-color: rgba(var(--bs-emphasis-color-rgb, 0, 0, 0), 0.16);
  }

  & select:focus,
  select:focus-visible {
    background-color: rgba(var(--bs-emphasis-color-rgb, 0, 0, 0), 0.12);
  }

  & select option:hover,
  & select option:focus,
  & select option:checked {
    background-color: rgba(var(--bs-emphasis-color-rgb, 0, 0, 0), 0.12) !important;
  }
}

